@@ -3,546 +3,763 @@
  <permission_list>
   <permission>
    <name>Access Transient Objects</name>
+   <role>Assignee</role>
+   <role>Assignor</role>
+   <role>Associate</role>
+   <role>Auditor</role>
+   <role>Author</role>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Access arbitrary user session data</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Access contents information</name>
+   <role>Assignee</role>
+   <role>Assignor</role>
+   <role>Associate</role>
+   <role>Auditor</role>
+   <role>Author</role>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Access future portal content</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Access inactive portal content</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Access session data</name>
+   <role>Assignee</role>
+   <role>Assignor</role>
+   <role>Associate</role>
+   <role>Auditor</role>
+   <role>Author</role>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>AccessContentsInformation</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Accelerated HTTP Cache Managers</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add BTreeFolder2s</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Base18 Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Browser Id Manager</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add CMF Active Processs</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add CMF Caching Policy Managers</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add CMF Core Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add CMF Report Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add CMF Sites</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add CMFActivity Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add CMFCalendar Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add CMFCategory Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add CMFDefault Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add CMFMailIn Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add CMFWiki Comment</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Content Type Registrys</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Cookie Crumblers</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Database Methods</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Documents, Images, and Files</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5 Filesystem Formulator Forms</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5 Forms</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5 OOo Templates</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5 PDF Forms</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5 PDF Templates</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5 Publications</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5 Reports</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5 Sites</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5 Subscriptions</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5 Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5Catalog Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5Form Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5Shop Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5SyncML Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ERP5Type Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ExtFiles</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ExtImages</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add External Methods</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Filesystem Directory Views</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Folders</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Formulator Forms</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add LocalContents</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add LocalFolders</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Localizers</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add MMM Shop Toolss</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add MailHost objects</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add MessageCatalogs</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Page Templates</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Photo Folders</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Photos</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Pluggable Index</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Portal ZSyncer Tools</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Python Scripts</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add RAM Cache Managers</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ReStructuredText Documents</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Session Data Manager</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Site Roots</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Temporary Folder</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Transient Object Container</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add User Folders</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Versions</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Virtual Host Monsters</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Vocabularies</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Z Gadfly Database Connections</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Z MySQL Database Connections</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ZCatalogs</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ZMailIn Clients</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ZMailMessages</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ZODB Mount Points</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add ZSyncers</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add Zope Tutorials</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add portal content</name>
+   <role>Assignor</role>
+   <role>Author</role>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add portal events</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add portal folders</name>
+   <role>Assignor</role>
+   <role>Author</role>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add portal member</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add portal topics</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Add shop category</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change Browser Id Manager</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change CMFWiki Regulations</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change DTML Documents</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change DTML Methods</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change Database Connections</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change Database Methods</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change ExtFile/ExtImage</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change External Methods</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change Formulator Fields</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change Formulator Forms</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change Images and Files</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change Lock Information</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change Page Templates</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change Photo</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change Python Scripts</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change Session Data Manager</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change Versions</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change ZMailIn</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change ZMailMessages</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change bindings</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change cache managers</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change cache settings</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change configuration</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change permissions</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change portal events</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change portal topics</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Change proxy roles</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Checkout shopping cart</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Copy or Move</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Create CMFWiki Page</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Create Transient Objects</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Create class instances</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Define permissions</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Delete objects</name>
+   <role>Assignor</role>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Download ExtFile/ExtImage</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Download Product</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Edit CMFWiki Page</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Edit Factories</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Edit ReStructuredText</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>FTP access</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Import/Export objects</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Join/leave Versions</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>List folder contents</name>
+   <role>Assignee</role>
+   <role>Assignor</role>
+   <role>Associate</role>
+   <role>Auditor</role>
+   <role>Author</role>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>List portal members</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>List undoable changes</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Log Site Errors</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Log to the Event Log</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Mail forgotten password</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage Access Rules</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage Transient Object Container</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage Translation Services</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage Vocabulary</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage WebDAV Locks</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage Z Classes</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage ZCatalog Entries</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage ZCatalogIndex Entries</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage currencies</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage extensions</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage languages</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage messages</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage portal</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage properties</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage shop</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage shop catalog</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage shop category</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage users</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Manage_messages</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Modify Cookie Crumblers</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Modify portal content</name>
+   <role>Assignor</role>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Move CMFWiki Page</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Open/Close Database Connection</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Open/Close Database Connections</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Post mail to ZMailIn</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Query Vocabulary</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Reply to item</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Request review</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Review portal content</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Save/discard Version changes</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Search ZCatalog</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Set own password</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Set own properties</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Take ownership</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Test Database Connections</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Translate Content</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Undo changes</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Use Database Methods</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Use Factories</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>Use mailhost services</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>View</name>
+   <role>Assignee</role>
+   <role>Assignor</role>
+   <role>Associate</role>
+   <role>Auditor</role>
+   <role>Author</role>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>View History</name>
+   <role>Assignee</role>
+   <role>Assignor</role>
+   <role>Associate</role>
+   <role>Auditor</role>
+   <role>Author</role>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>View ZMailMessage</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>View management screens</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>WebDAV Lock items</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>WebDAV Unlock items</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>WebDAV access</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>ZSyncer: Use ZSyncer</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>ZopeProfiler: manage</name>
+   <role>Manager</role>
   </permission>
   <permission>
    <name>ZopeProfiler: view</name>
+   <role>Manager</role>
   </permission>
  </permission_list>
  <portal_type>Use Case Module</portal_type>
