@@ -1,4 +1,7 @@
 2005-01-24 yo
+* Set the permissions of use_case_module.
+
+2005-01-24 yo
 * Remove the PropertySheet DocumentAnalysisLexiconItem.
 
 2005-01-24 yo
